--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -1,9 +1,8 @@
 <section class="py-14">
   <div class="max-w-screen-xl mx-auto px-4 text-gray-600 md:px-8">
     <div class="max-w-xl space-y-3">
-      <h3 class="text-indigo-600 font-semibold">Features</h3>
       <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
-        Do more with less complexity
+        Services
       </p>
       <p>
         Explore our services designed for artists and producers: music
@@ -98,69 +97,46 @@
     </div>
   </div>
 </section>
-<section class="overflow-hidden bg-gray-50 sm:grid sm:grid-cols-2">
-  <div class="p-8 md:p-12 lg:px-16 lg:py-24">
-    <div
-      class="mx-auto max-w-xl text-center ltr:sm:text-left rtl:sm:text-right"
-    >
-      <h2 class="text-2xl font-bold text-gray-900 md:text-3xl">
-        VCG Distribution
-      </h2>
-      <p class="hidden text-gray-500 md:mt-4 md:block">
-        We distribute music for emerging artists on all major streaming and
-        download platforms. Choose between our per-project service or an
-        unlimited monthly subscription. Artists opting for the subscription will
-        be showcased on the VCG website.
-      </p>
-      <div class="mt-4 md:mt-8">
+
+<section class="py-14">
+  <div class="max-w-screen-xl mx-auto md:px-8">
+    <div class="items-center gap-x-12 sm:px-4 md:px-0 lg:flex">
+      <div class="flex-1 sm:hidden lg:block">
+        <img
+          src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+          class="md:max-w-lg sm:rounded-lg"
+          alt=""
+        />
+      </div>
+      <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
+        <h3 class="text-indigo-600 font-semibold">VCG Distribution</h3>
+        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+          Music Distribution Services
+        </p>
+        <p class="mt-3 text-gray-600">
+          We distribute music for emerging artists on all major streaming and
+          download platforms. Choose between our per-project service or an
+          unlimited monthly subscription. Artists opting for the subscription
+          will be showcased on the VCG website.
+        </p>
         <a
-          href="#"
-          class="inline-block rounded bg-emerald-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-emerald-700 focus:outline-none focus:ring focus:ring-yellow-400"
+          href="javascript:void(0)"
+          class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
         >
-          Learn More
+          Get your music distributed !
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            class="w-5 h-5"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
         </a>
-      </div>
-    </div>
-  </div>
-  <img
-    alt=""
-    src="https://images.unsplash.com/photo-1464582883107-8adf2dca8a9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-    class="h-56 w-full object-cover sm:h-full"
-  />
-</section>
-<section>
-  <div class="mx-auto max-w-screen-2xl px-4 py-8 sm:px-6 lg:px-8">
-    <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
-      <div class="bg-blue-600 p-8 md:p-12 lg:px-16 lg:py-24">
-        <div class="mx-auto max-w-xl text-center">
-          <h2 class="text-2xl font-bold text-white md:text-3xl">
-            VCG Production
-          </h2>
-          <p class="hidden text-white/90 sm:mt-4 sm:block">
-            Beatmakers can distribute their work on YouTube and platforms like
-            BeatStars through our network for free. Join our growing community
-            and have your profile showcased on the VCG website.
-          </p>
-          <div class="mt-4 md:mt-8">
-            <a
-              href="#"
-              class="inline-block rounded border border-white bg-white px-12 py-3 text-sm font-medium text-blue-500 transition hover:bg-transparent hover:text-white focus:outline-none focus:ring focus:ring-yellow-400"
-            >
-              Join Now
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="grid grid-cols-2 gap-4 md:grid-cols-1 lg:grid-cols-2">
-        <img
-          alt=""
-          src="https://images.unsplash.com/photo-1621274790572-7c32596bc67f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8MHx8"
-          class="h-40 w-full object-cover sm:h-56 md:h-full"
-        />
-        <img
-          alt=""
-          src="https://images.unsplash.com/photo-1567168544813-cc03465b4fa8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90MHxpaHRz&auto=format&fit=crop&w=774&q=80"
-        />
       </div>
     </div>
   </div>
@@ -176,7 +152,49 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-indigo-600 font-semibold">VCG Studios</h3>
+        <h3 class="text-indigo-600 font-semibold">VCG Production</h3>
+        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+          Beatmaker Team
+        </p>
+        <p class="mt-3 text-gray-600">
+          Beatmakers can distribute their work on YouTube and platforms like
+          BeatStars through our network for free. Join our growing community and
+          have your profile showcased on the VCG website.
+        </p>
+        <a
+          href="javascript:void(0)"
+          class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
+        >
+          Join our beatmakers !
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            class="w-5 h-5"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="py-14">
+  <div class="max-w-screen-xl mx-auto md:px-8">
+    <div class="items-center gap-x-12 sm:px-4 md:px-0 lg:flex">
+      <div class="flex-1 sm:hidden lg:block">
+        <img
+          src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+          class="md:max-w-lg sm:rounded-lg"
+          alt=""
+        />
+      </div>
+      <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
+        <h3 class="text-indigo-600 font-semibold">VCG Studio</h3>
         <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
           Mixing and Recording Services
         </p>
@@ -191,7 +209,7 @@
           href="javascript:void(0)"
           class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
         >
-          Learn more
+          Book a studio session !
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 20 20"
