--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -1,9 +1,7 @@
 <section class="py-14">
-  <div class="max-w-screen-xl mx-auto px-4 text-gray-600 md:px-8">
+  <div class="max-w-screen-xl mx-auto px-4 text-gray-300 md:px-8">
     <div class="max-w-xl space-y-3">
-      <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
-        Services
-      </p>
+      <p class="text-white text-3xl font-semibold sm:text-4xl">Services</p>
       <p>
         Explore our services designed for artists and producers: music
         distribution, beatmaking, and professional mixing/recording.
@@ -16,24 +14,38 @@
         <!-- Feature 1 -->
         <li class="feature-1 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
+            class="w-12 h-12 p-2 border text-indigo-600 rounded-full flex items-center justify-center"
           >
             <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
+              width="800px"
+              height="800px"
               viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
             >
               <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 013 19.875v-6.75zM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 01-1.125-1.125V8.625zM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125-1.125h-2.25a1.125 1.125 0 01-1.125-1.125V4.125z"
+                d="M11.25 16.9999C11.25 16.5857 10.9142 16.2499 10.5 16.2499C10.0858 16.2499 9.75 16.5857 9.75 16.9999C9.75 17.4142 10.0858 17.7499 10.5 17.7499C10.9142 17.7499 11.25 17.4142 11.25 16.9999Z"
+                fill="#ffffff"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M8.67239 7.54199H15.3276C18.7024 7.54199 20.3898 7.54199 21.3377 8.52882C22.2855 9.51564 22.0625 11.0403 21.6165 14.0895L21.1935 16.9811C20.8437 19.3723 20.6689 20.5679 19.7717 21.2839C18.8745 21.9999 17.5512 21.9999 14.9046 21.9999H9.09534C6.4488 21.9999 5.12553 21.9999 4.22834 21.2839C3.33115 20.5679 3.15626 19.3723 2.80648 16.9811L2.38351 14.0895C1.93748 11.0403 1.71447 9.51565 2.66232 8.52882C3.61017 7.54199 5.29758 7.54199 8.67239 7.54199ZM12.75 10.4999C12.75 10.0857 12.4142 9.74995 12 9.74995C11.5858 9.74995 11.25 10.0857 11.25 10.4999V14.878C11.0154 14.7951 10.763 14.7499 10.5 14.7499C9.25736 14.7499 8.25 15.7573 8.25 16.9999C8.25 18.2426 9.25736 19.2499 10.5 19.2499C11.7426 19.2499 12.75 18.2426 12.75 16.9999V13.3197C13.4202 13.8633 14.2617 14.2499 15 14.2499C15.4142 14.2499 15.75 13.9142 15.75 13.4999C15.75 13.0857 15.4142 12.7499 15 12.7499C14.6946 12.7499 14.1145 12.5313 13.5835 12.0602C13.0654 11.6006 12.75 11.0386 12.75 10.4999Z"
+                fill="#ffffff"
+              />
+              <path
+                opacity="0.4"
+                d="M8.50956 2.00001H15.4897C15.7221 1.99995 15.9004 1.99991 16.0562 2.01515C17.164 2.12352 18.0708 2.78958 18.4553 3.68678H5.54395C5.92846 2.78958 6.83521 2.12352 7.94303 2.01515C8.09884 1.99991 8.27708 1.99995 8.50956 2.00001Z"
+                fill="#ffffff"
+              />
+              <path
+                opacity="0.7"
+                d="M6.3102 4.72266C4.91958 4.72266 3.77931 5.56241 3.39878 6.67645C3.39085 6.69967 3.38325 6.72302 3.37598 6.74647C3.77413 6.6259 4.18849 6.54713 4.60796 6.49336C5.68833 6.35485 7.05367 6.35492 8.6397 6.35501H15.5318C17.1178 6.35492 18.4832 6.35485 19.5635 6.49336C19.983 6.54713 20.3974 6.6259 20.7955 6.74647C20.7883 6.72302 20.7806 6.69967 20.7727 6.67645C20.3922 5.56241 19.2519 4.72266 17.8613 4.72266H6.3102Z"
+                fill="#ffffff"
               />
             </svg>
           </div>
-          <h4 class="text-lg text-gray-800 font-semibold">
+          <h4 class="text-lg text-white font-semibold">
             Music Distribution
           </h4>
           <p>
@@ -47,21 +59,21 @@
             class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
           >
             <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
+              width="24"
+              height="24"
               viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
             >
               <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M22 21C23.1046 21 24 20.1046 24 19V5C24 3.89543 23.1046 3 22 3H3C1.89543 3 1 3.89543 1 5V19C1 20.1046 1.89543 21 3 21H22ZM11 5H8.98486V13H7.98511V19H12V13H11V5ZM18.0151 19H22V5H19.0151V13H18.0151V19ZM17.0151 13H16.0151V5H14V13H13V19H17.0151V13ZM6.98511 19V13H5.98486V5H3L3 19H6.98511Z"
+                fill="#ffffff"
               />
             </svg>
           </div>
-          <h4 class="text-lg text-gray-800 font-semibold">Beatmaking</h4>
+          <h4 class="text-lg text-white font-semibold">Beatmaking</h4>
           <p>
             Join our beatmaker network and get your productions promoted on
             YouTube and selling platforms.
@@ -70,27 +82,42 @@
         <!-- Feature 3 -->
         <li class="feature-3 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
+            class="w-12 h-12 p-2 border text-indigo-600 rounded-full flex items-center justify-center"
           >
             <svg
+              version="1.0"
+              id="Layer_1"
               xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="800px"
+              height="800px"
+              viewBox="0 0 64 64"
+              enable-background="new 0 0 64 64"
+              xml:space="preserve"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M6.429 9.75L2.25 12l4.179 2.25m0-4.5l5.571 3 5.571-3m-11.142 0L2.25 7.5 12 2.25l9.75 5.25-4.179 2.25m0 0L21.75 12l-4.179 2.25m0 0l4.179 2.25L12 21.75 2.25 16.5l4.179-2.25m11.142 0l-5.571 3-5.571-3"
-              />
+              <g>
+                <path
+                  fill="#ffffff"
+                  d="M32,48c7.732,0,14-6.268,14-14v-3h-7c-0.553,0-1-0.447-1-1s0.447-1,1-1h7v-4h-7c-0.553,0-1-0.447-1-1
+             s0.447-1,1-1h7v-4h-7c-0.553,0-1-0.447-1-1s0.447-1,1-1h7v-3c0-7.732-6.268-14-14-14S18,6.268,18,14v3h7c0.553,0,1,0.447,1,1
+             s-0.447,1-1,1h-7v4h7c0.553,0,1,0.447,1,1s-0.447,1-1,1h-7v4h7c0.553,0,1,0.447,1,1s-0.447,1-1,1h-7v3C18,41.732,24.268,48,32,48z"
+                />
+                <path
+                  fill="#ffffff"
+                  d="M51,31.002c-1.657,0-2.999,1.343-3,3C47.999,42.838,40.837,50,32,50s-15.999-7.162-16-15.998
+             c0-1.657-1.343-3-3-3s-3,1.343-3,3c0,10.429,7.26,19.156,17,21.422V60c0,2.209,1.791,4,4,4h2c2.209,0,4-1.791,4-4v-4.576
+             c9.74-2.266,17-10.993,17-21.422C53.999,32.345,52.657,31.002,51,31.002z M37,53.346c-0.654,0.168-1.321,0.304-2,0.406v1.247v0.794
+             V60c0,1.104-0.896,2-2,2h-2c-1.104,0-2-0.896-2-2v-4.207v-0.794v-1.247c-0.679-0.103-1.346-0.238-2-0.406
+             c-8.621-2.224-15-10.029-15-19.344c0-0.554,0.447-1,1-1s1,0.446,1,1C14.001,43.941,22.059,52,32,52s17.999-8.059,18-17.998
+             c0.001-0.552,0.447-1,1-1s0.999,0.448,1,1C52,43.316,45.621,51.122,37,53.346z"
+                />
+              </g>
             </svg>
           </div>
-          <h4 class="text-lg text-gray-800 font-semibold">Mixing/Recording</h4>
+          <h4 class="text-lg text-white font-semibold">Mixing/Recording</h4>
           <p>
-            High-quality services in hip-hop/rap music production with
-            professional-grade studios.
+            Quality services in hip-hop/rap music recording and/or mixing in our
+            studios in Haute-Savoie, France.
           </p>
         </li>
       </ul>
@@ -110,10 +137,10 @@
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
         <h3 class="text-indigo-600 font-semibold">VCG Distribution</h3>
-        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+        <p class="text-white text-3xl font-semibold sm:text-4xl">
           Music Distribution Services
         </p>
-        <p class="mt-3 text-gray-600">
+        <p class="mt-3 text-gray-300">
           We distribute music for emerging artists on all major streaming and
           download platforms. Choose between our per-project service or an
           unlimited monthly subscription. Artists opting for the subscription
@@ -124,12 +151,7 @@
           class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Get your music distributed !
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="w-5 h-5"
-          >
+          <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path
               fill-rule="evenodd"
               d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
@@ -153,10 +175,10 @@
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
         <h3 class="text-indigo-600 font-semibold">VCG Production</h3>
-        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+        <p class="text-white text-3xl font-semibold sm:text-4xl">
           Beatmaker Team
         </p>
-        <p class="mt-3 text-gray-600">
+        <p class="mt-3 text-gray-300">
           Beatmakers can distribute their work on YouTube and platforms like
           BeatStars through our network for free. Join our growing community and
           have your profile showcased on the VCG website.
@@ -166,12 +188,7 @@
           class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Join our beatmakers !
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="w-5 h-5"
-          >
+          <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path
               fill-rule="evenodd"
               d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
@@ -195,10 +212,10 @@
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
         <h3 class="text-indigo-600 font-semibold">VCG Studio</h3>
-        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+        <p class="text-white text-3xl font-semibold sm:text-4xl">
           Mixing and Recording Services
         </p>
-        <p class="mt-3 text-gray-600">
+        <p class="mt-3 text-gray-300">
           We offer high-quality recording and mixing services specializing in
           hip-hop/rap music, with plans to expand to other genres. Based in
           Haute-Savoie, France, we operate two amateur studios. Artists can
@@ -210,12 +227,7 @@
           class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Book a studio session !
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="w-5 h-5"
-          >
+          <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path
               fill-rule="evenodd"
               d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
