--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -14,7 +14,7 @@
         <!-- Feature 1 -->
         <li class="feature-1 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 p-2 border text-blue-700 rounded-full flex items-center justify-center"
+            class="w-12 h-12 p-2 border text-blue-600 rounded-full flex items-center justify-center"
           >
             <svg
               width="800px"
@@ -45,7 +45,7 @@
               />
             </svg>
           </div>
-          <h4 class="text-lg text-white font-semibold">Music Distribution</h4>
+          <h4 class="text-lg text-blue-600 font-semibold">Music Distribution</h4>
           <p>
             Flexible solutions for artists to share their music globally on
             streaming and download platforms.
@@ -54,7 +54,7 @@
         <!-- Feature 2 -->
         <li class="feature-2 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 border text-blue-700 rounded-full flex items-center justify-center"
+            class="w-12 h-12 border text-blue-600 rounded-full flex items-center justify-center"
           >
             <svg
               width="24"
@@ -71,7 +71,7 @@
               />
             </svg>
           </div>
-          <h4 class="text-lg text-white font-semibold">Beatmaking</h4>
+          <h4 class="text-lg text-blue-600 font-semibold">Beatmaking</h4>
           <p>
             Join our beatmaker network and get your productions promoted on
             YouTube and selling platforms.
@@ -80,7 +80,7 @@
         <!-- Feature 3 -->
         <li class="feature-3 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 p-2 border text-blue-700 rounded-full flex items-center justify-center"
+            class="w-12 h-12 p-2 border text-blue-600 rounded-full flex items-center justify-center"
           >
             <svg
               version="1.0"
@@ -112,7 +112,7 @@
               </g>
             </svg>
           </div>
-          <h4 class="text-lg text-white font-semibold">Mixing/Recording</h4>
+          <h4 class="text-lg text-blue-600 font-semibold">Mixing/Recording</h4>
           <p>
             Quality services in hip-hop/rap music recording and/or mixing in our
             studios in Haute-Savoie, France.
@@ -134,7 +134,7 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-blue-700 font-semibold">VCG Distribution</h3>
+        <h3 class="text-blue-600 font-semibold">VCG Distribution</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
           Music Distribution Services
         </p>
@@ -146,7 +146,7 @@
         </p>
         <a
           href="javascript:void(0)"
-          class="inline-flex gap-x-1 items-center text-blue-700 hover:text-indigo-500 duration-150 font-medium"
+          class="inline-flex gap-x-1 items-center text-blue-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Get your music distributed !
           <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
@@ -172,7 +172,7 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-blue-700 font-semibold">VCG Production</h3>
+        <h3 class="text-blue-600 font-semibold">VCG Production</h3>
         <div class="flex items-center space-x-2">
           <p class="text-white text-3xl font-semibold sm:text-4xl">
             Beatmaker Team
@@ -191,7 +191,7 @@
         </p>
         <a
           href="javascript:void(0)"
-          class="inline-flex gap-x-1 items-center text-blue-700 hover:text-indigo-500 duration-150 font-medium"
+          class="inline-flex gap-x-1 items-center text-blue-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Join our beatmakers !
           <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
@@ -217,7 +217,7 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-blue-700 font-semibold">VCG Studio</h3>
+        <h3 class="text-blue-600 font-semibold">VCG Studio</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
           Mixing and Recording Services
         </p>
@@ -230,7 +230,7 @@
         </p>
         <a
           href="javascript:void(0)"
-          class="inline-flex gap-x-1 items-center text-blue-700 hover:text-indigo-500 duration-150 font-medium"
+          class="inline-flex gap-x-1 items-center text-blue-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Book a studio session !
           <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
