--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col justify-center items-center">
+<div class="flex flex-col justify-center items-center lg:min-w-[700px]">
   <dl
-    class="max-w-md text-gray-900 divide-y divide-gray-200 dark:text-white dark:divide-gray-700"
+    class="w-full divide-y divide-gray-200 dark:text-white dark:divide-gray-700"
   >
     <div class="flex flex-col pb-3">
       <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400">
@@ -24,13 +24,13 @@
     </div>
   </dl>
 
-  <div class="grid grid-cols-1 gap-4 mt-10">
+  <div class="grid grid-cols-1 gap-4 mt-10 w-full place-items-center">
     <div>
       <a
         href="https://www.instagram.com/vcg.recordz/"
         target="_blank"
         rel="noopener noreferrer"
-        class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+        class="block max-w-md p-6 border border-gray-200 rounded-lg shadow hover:bg-gray-100 bg-gray-800 border-gray-700 hover:bg-gray-700"
       >
         <div class="flex items-center">
           <svg
@@ -61,7 +61,7 @@
         href="https://www.beatstars.com/vcgproduction"
         target="_blank"
         rel="noopener noreferrer"
-        class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+        class="block max-w-md p-6 border border-gray-200 rounded-lg shadow hover:bg-gray-100 bg-gray-800 border-gray-700 hover:bg-gray-700"
       >
         <div class="flex items-center">
           <svg
@@ -97,7 +97,7 @@
         href="https://www.youtube.com/@VCGProduction"
         target="_blank"
         rel="noopener noreferrer"
-        class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+        class="block max-w-md p-6 border border-gray-200 rounded-lg shadow hover:bg-gray-100 bg-gray-800 border-gray-700 hover:bg-gray-700"
       >
         <div class="flex items-center">
           <svg
